<!--
  ~ Copyright (C) 2019 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="shop_again">Shop Again</string>
    <string name="this_is_your_cart">This is your cart</string>
    <string name="add_to_the_cart">Go to the cart</string>
    <string name="exit">Exit</string>
    <string name="the_item_is">The item is…</string>


    <string name="teas">"\Total price:                   €"</string>
    <!--string name="delivery">"\Delivery fees:                   €" </string-->
    <string name="total">"\TOTAL:                  €"</string>



    <!--new application -->
    <string name="app_name">M Fusion Sandford</string>
    <string name="choose_option">Start your order here:</string>
    <string name="delivery">Delivery</string>
    <string name="collection">Collection</string>
    <string name="see_menu">See menu</string>
    <string name="start_your_order">Start your order here:</string>
    <string name="todo">TODO</string>
    <string name="delivery_from">Delivery from €2.00</string>
    <string name="collection_from">Collect Store</string>
    <string name="menu">Menu</string>
    <string name="goBack">Go Back</string>


    ​<string-array name="Foods">
        ​<item name="food">Meal Deal 1 \n \n \n 3 in 1, spicy chicken wings &amp; a can of soft drink</item>
        ​<item name="food">Meal Deal 2 (3 + 1 &amp; S Roll) \n \n \n  3 in 1, two spring rolls &amp; can of soft drink</item>
        ​<item name="food">Meal Deal 3 (3+1 &amp; 4Balls) \n \n \n 3 in 1, four chicken balls &amp; a can of soft drink</item>
        ​<item name="food">Meal Deal 4 (chicken cy &amp; chips) \n \n \n Chicken, cury &amp; chips in one tray &amp; a can of soft drink</item>
        ​<item name="food">Meal Deal 5 (3+1 &amp; 6 nuggets) \n \n \n 3 n 1, six chicken nuggets &amp; a can of soft drink</item>
    ​</string-array>​

    <string-array name="FoodNames">
        ​<item name="foodName">Meal Deal 1 </item>
        ​<item name="foodName">Meal Deal 2 </item>
        ​<item name="foodName">Meal Deal 3 </item>
        ​<item name="foodName">Meal Deal 4 </item>
        ​<item name="foodName">Meal Deal 5 </item>
    ​</string-array>

    <!-- Submenu window details -->
    <string name="valor_text">€6.00</string>
    <string name="descrition_text">3 in 1, 4 spicy checkin wings &amp; a can of soft drink.</string>
    <string name="select_option_text">Select Option</string>
    <string name="select_drink_text">Select Drink (0.33L)</string>
    <string name="prawns_check_box">Prawn Crackers (+ €1.00)</string>
    <string name="cocacola_checkbox">Coca-Cola___________€1.50</string>
    <string name="dietcocacola_checkbox">Diet Coca-Cola_______€1.50</string>
    <string name="sprite_checkbox">Sprite_______________€1.50</string>
    <string name="sevenup_checkbox">7-UP________________€1.50</string>
    <string name="cluborange_checkbox">Club Orange_________€1.50</string>
    <string name="nodrink_checkbox">No Drink</string>
    <string name="add_to_tbe_basket_button">Add to the basket</string>

</resources>
