<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="850sp"
    android:background="@color/colorPrimary"
    tools:visibility="visible">

    <TextView
        android:id="@+id/name_food__text"
        android:layout_width="157dp"
        android:layout_height="46dp"
        android:layout_marginStart="36dp"
        android:text="@string/name_food__text"
        android:textColor="@color/white_text_color"
        app:layout_constraintBottom_toTopOf="@+id/descrition_text"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/valor_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="15dp"
        android:text="@string/valor_text"
        android:textColor="@color/white_text_color"
        app:layout_constraintBottom_toTopOf="@+id/descrition_text"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/descrition_text"
        android:layout_width="362dp"
        android:layout_height="44dp"
        android:text="@string/descrition_text"
        android:textColor="@color/white_text_color"
        app:layout_constraintBottom_toTopOf="@+id/select_option_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.734"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/select_option_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/select_option_text"
        android:textColor="@color/white_text_color"
        app:layout_constraintBottom_toTopOf="@+id/prawns_check_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/select_drink_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/select_drink_text"
        android:textColor="@color/white_text_color"
        app:layout_constraintBottom_toTopOf="@+id/cocacola_checkbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/prawns_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/prawns_check_box"
        android:textColor="@color/white_text_color"
        app:layout_constraintBottom_toTopOf="@+id/select_drink_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/cocacola_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/cocacola_checkbox"
        android:textColor="@color/white_text_color"
        app:layout_constraintBottom_toTopOf="@+id/dietcocacola_checkbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/dietcocacola_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginBottom="20dp"
        android:text="@string/dietcocacola_checkbox"
        android:textColor="@color/white_text_color"
        app:layout_constraintBottom_toTopOf="@+id/sprite_checkbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/sprite_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/sprite_checkbox"
        android:textColor="@color/white_text_color"
        app:layout_constraintBottom_toTopOf="@+id/sevenup_checkbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/sevenup_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/sevenup_checkbox"
        android:textColor="@color/white_text_color"
        app:layout_constraintBottom_toTopOf="@+id/cluborange_checkbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent" />


    <CheckBox
        android:id="@+id/cluborange_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/cluborange_checkbox"
        android:textColor="@color/white_text_color"
        app:layout_constraintBottom_toTopOf="@+id/add_to_tbe_basket_button_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/add_to_tbe_basket_button_id"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/add_to_tbe_basket_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
