<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2019 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_options"
        tools:context=".screens.menu.MenuFragment"
        tools:visibility="visible">

        <TextView
            android:id="@+id/delivery_from_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif"
            android:text="@string/delivery_from"
            android:textAlignment="center"
            android:textColor="@color/white_text_color"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_text_color"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="650dp" />

        <ListView
            android:id="@+id/lista_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/Foods"
            android:listSelector="@color/grey_text_color"
            android:textColor="@color/white_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="63dp" />

        <Button
            android:id="@+id/checkout_button"
            android:layout_width="300dp"
            android:layout_height="43dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/select_grey"
            android:text="@string/add_to_the_cart"
            android:textColor="@color/white_text_color"
            android:theme="@style/DeliveryCollectionButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_button" />

        <ImageView
            android:id="@+id/moto_image"
            android:layout_width="32dp"
            android:layout_height="33dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.042"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/moto" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>